--- a/src/main/resources/connect.properties
+++ b/src/main/resources/connect.properties
@@ -1,3 +1,5 @@
 connect.api.url=http://192.168.0.150:9999
+#connect.api.url=http://192.168.9.64:9999
 connect.server.ip=192.168.0.150
+#connect.server.ip=192.168.9.64
 connect.server.port=8855
